# tt-metal-BSpMM

./: .clangd  .gitignore  CLAUDE.md  CMakeCache.txt  build_metal.sh  capture-release  capture_trace.sh  csvexport-release  debug_example.sh
tt_metal/programming_examples/rahmy/: CMakeLists.txt  notes.txt
tt_metal/programming_examples/rahmy/SpMV_common/: config.h  input.h  mmio.c  mmio.h
tt_metal/programming_examples/rahmy/add_2_integers_in_compute_rahmy/: add_2_integers_in_compute_rahmy.cpp
tt_metal/programming_examples/rahmy/block_spmm/: CMakeLists.txt  README.md  block.cpp  bsr_matrix.hpp  debug_reader.cpp  host_code.hpp  include_me.hpp  profile_block.cpp  test_block.cpp  test_suite.hpp
tt_metal/programming_examples/rahmy/block_spmm/analysis_tools/: README.md  analyze_differences.py  analyze_tiles.py  compare_files.py  find_good_regions.py  run_all_analysis.py
tt_metal/programming_examples/rahmy/block_spmm/inc/: CMakeLists.txt  bmm_op.hpp  bsr_matrix.hpp  host_code.hpp  include_me.hpp  test_suite.hpp
tt_metal/programming_examples/rahmy/block_spmm/src/: block.cpp  export_to_csv.cpp  matmul_multicore_reuse_profiled.cpp  profile_block.cpp  profile_dense.cpp  test_block.cpp
tt_metal/programming_examples/rahmy/block_spmm/test_2_blocks_col_simplified/: bsr.txt
tt_metal/programming_examples/rahmy/hello_world_compute_kernel_remix/: hello_world_compute_kernel_remix.cpp
tt_metal/programming_examples/rahmy/kernel_reports/: bsr-spmm.txt  matmul_multicore_reuse.md
tt_metal/programming_examples/rahmy/sfpi_fill/: sfpi_fill.cpp
tt_metal/programming_examples/rahmy/sfpi_fill/compute/: fill.cpp
tt_metal/programming_examples/rahmy/single_core_spmv/: single_core_spmv.cpp  single_core_spmv_csr.txt
(+378 files in other folders)
